Fix some Composer keywords

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "symfony/google-chat-notifier",
     "type": "symfony-notifier-bridge",
     "description": "Symfony Google Chat Notifier Bridge",
-    "keywords": ["google", "chat", "google chat", "notifier"],
+    "keywords": ["google", "chat", "google-chat", "notifier"],
     "homepage": "https://symfony.com",
     "license": "MIT",
     "authors": [
